# ucsd-study-room

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
docs/plans/: 2026-03-08-my-events-design.md  2026-03-08-my-events-plan.md  2026-03-08-universal-mcp-compatibility-design.md  2026-03-08-universal-mcp-compatibility.md  2026-03-09-uvx-migration-design.md  2026-03-09-uvx-migration-plan.md
study_room/: auth.py  booking.py  cli.py  config.py  mcp_server.py  updater.py
tests/: test_auth.py  test_booking.py  test_config.py  test_headless_search.py  test_updater.py
